[gd_scene load_steps=7 format=3 uid="uid://btmiukp8o3y34"]

[ext_resource type="Shader" path="res://shaders/redEnemy.gdshader" id="1_b6kpf"]
[ext_resource type="Script" path="res://scripts/gameFolder/StarEnemy.gd" id="2_g4abe"]
[ext_resource type="Texture2D" uid="uid://bbc0h0gfa2b74" path="res://assets/StarEnemy.png" id="3_xhlph"]
[ext_resource type="AudioStream" uid="uid://bv11k7rmmyyf4" path="res://assets/hitSounds/punch-1-166694.mp3" id="6_5u7ws"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_g6bmg"]
resource_local_to_scene = true
shader = ExtResource("1_b6kpf")
shader_parameter/damage_value = 0.0
shader_parameter/alpha_value = 1.0

[sub_resource type="Curve" id="Curve_exf2e"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), -1.72592, 0.0, 0, 0]
point_count = 2

[node name="StarEnemy" type="Area2D" groups=["Enemy"]]
z_index = 3
material = SubResource("ShaderMaterial_g6bmg")
position = Vector2(-8, 16)
collision_layer = 2
script = ExtResource("2_g4abe")

[node name="SplatchoEnemy" type="Sprite2D" parent="."]
use_parent_material = true
position = Vector2(10, -90)
texture = ExtResource("3_xhlph")

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
z_index = 5
scale = Vector2(15, 15)
emitting = false
amount = 10
lifetime = 2.0
one_shot = true
speed_scale = 2.0
explosiveness = 0.9
emission_shape = 1
emission_sphere_radius = 5.0
direction = Vector2(1, 1)
spread = 180.0
gravity = Vector2(0, 600)
initial_velocity_min = 25.0
initial_velocity_max = 50.0
angle_min = -90.0
angle_max = 90.0
scale_amount_min = 30.0
scale_amount_max = 45.0
scale_amount_curve = SubResource("Curve_exf2e")
color = Color(0.807843, 0, 1, 1)

[node name="CharHitPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_5u7ws")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
visible = false
polygon = PackedVector2Array(10, -444, -78, -174, -366, -174, -133, -6, -221, 265, 10, 97, 242, 267, 153, -6, 386, -174, 98, -174)

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
